TFP-5637 - legger inn eksternReferanse ved opprettJournalpost. (#2718)
* TFP-5637 - legger inn eksternReferanse ved opprettJournalpost.

* Legger inn BESTILLING_UUID på taskene.

* Sonar og fjerner fritekst.